# sic_mpu9250_ros

./: CMakeLists.txt  README.md  package.xml
config/: sic_mpu9250_start_params.yaml  sic_mpu9250_test_params.yaml
include/sic_mpu9250_ros/: sic_mpu9250_cppserial_lib.hpp
launch/: start_sic_mpu9250.launch.py  test_sic_mpu9250.launch.py
src/: sic_mpu9250.cpp
